<resources>
    <string name="app_name">GpsApplication</string>

    <string name="key_save_photo_paths">photoPaths</string>
    <string name="key_save_map_url">savemapurl</string>
    <string name="key_save_username">username</string>
    <string name="key_save_password">password</string>
    <string name="key_save_longitude">longitude</string>
    <string name="key_save_latitude">latitude</string>
    <string name="key_save_date">date</string>
    <string name="key_pref_upload">prefUpload</string>

    <string name="pref_upload_title">数据保存方式</string>
    <string name="pref_multi_photo">多选</string>

    <!-- strings for settings -->
    <string name="upload_server">上传数据到服务器</string>
    <string name="upload_local">保存数据到本地</string>

    <!-- strings for menu -->
    <string name="title_menu_setting">设置</string>
    <string name="title_menu_upload">上传</string>
    <string name="title_menu_camera">相机</string>

    <!--strings for permission dialog -->
    <string name="action_setting">设置</string>
    <string name="action_quit">退出</string>
    <string name="dialog_title">帮助</string>
    <string name="dialog_message">当前内容缺少必要权限。 </string>
    <string name="title_activity_login">登录</string>

    <!-- Strings related to login -->
    <string name="prompt_username">用户名</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">登录</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">用户名错误</string>
    <string name="error_invalid_password">密码错误</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="open_map">打开地图</string>
    <string name="server_test">测试服务器</string>

    <!--Strings for MapView test -->
    <string name="featureServiceURL">http://services.arcgis.com/P3ePLMYs2RVChkJx/arcgis/rest/services/World_Cities/FeatureServer/0</string>
    <string name="query_us">地图 : 乡镇区划</string>
    <string name="query_ca">地图 : 影像</string>
    <string name="query_fr">地图 : 土地利用现状</string>
    <string name="query_au">地图 : 规划</string>
    <string name="query_br">地图 : 坝区基本农田</string>
    <string name="city"><b>City: </b></string>
    <string name="pop"><b>Population: </b></string>

    <string name="split">.</string>
    <string name="curr_location">当前位置 :</string>
    <string name="business_type">业务类型 :</string>
    <string name="sit_descrip">情况描述 :</string>
</resources>
