<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_setting"
        android:title="@string/title_menu_setting"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_upload"
        android:icon="@drawable/icon_action_upload"
        android:title="@string/title_menu_upload"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_camera"
        android:icon="@drawable/icon_camera"
        android:title="@string/title_menu_camera"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_map"
        android:title="@string/open_map"
        app:showAsAction="never" />
    <item
        android:id="@+id/server_test"
        android:title="@string/server_test"
        app:showAsAction="never" />

</menu>