<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.administrator.gpsapplication.LocationActivity">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/view_photo_preview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"></android.support.v7.widget.RecyclerView>


    <EditText
        android:id="@+id/edit_business"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="0dp"
        android:ems="10"
        android:inputType="textCapSentences"
        android:singleLine="true"
        app:layout_constraintStart_toEndOf="@+id/text_business"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_business"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/business_type"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_sit_des"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:text="@string/sit_descrip"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_business" />

    <EditText
        android:id="@+id/edit_sit_des"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:gravity="top"
        android:inputType="textMultiLine"
        android:maxLines="4"
        android:minLines="4"
        android:singleLine="false"
        app:layout_constraintStart_toEndOf="@+id/text_sit_des"
        app:layout_constraintTop_toBottomOf="@+id/edit_business" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="21dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/edit_sit_des">

        <TextView
            android:id="@+id/curr_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/curr_location" />

        <TextView
            android:id="@+id/dis_latitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            app:layout_constraintStart_toEndOf="@+id/curr_location" />

        <TextView
            android:id="@+id/split"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:text="@string/split"
            app:layout_constraintStart_toEndOf="@+id/dis_latitude" />

        <TextView
            android:id="@+id/dis_longitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            app:layout_constraintStart_toEndOf="@+id/split" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>
